fix junit-env-extension integration test dependencies

--- a/junit-env-extension/src/it/sample-test-project/pom.xml
+++ b/junit-env-extension/src/it/sample-test-project/pom.xml
@@ -22,7 +22,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>eu.coldrye.junit5</groupId>
+      <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-env-extension</artifactId>
       <version>${junit-env-extension.version}</version>
     </dependency>
