add additional information to junit-env-extension pom

--- a/junit-env-extension/pom.xml
+++ b/junit-env-extension/pom.xml
@@ -16,4 +16,29 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+  <name>${project.groupId}:${project.artifactId}</name>
+  <description>Extension for JUnit5 for managing set up and tear down of environments during testing</description>
+  <url>https://github.com/coldrye-java/junit-testing</url>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Carsten Klein</name>
+      <email>trancesilken@gmail.com</email>
+      <organization>coldrye.eu</organization>
+      <organizationUrl>https://github.com/coldrye</organizationUrl>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git://github.com/coldrye-java/junit-testing.git</connection>
+    <developerConnection>scm:git:ssh://github.com:coldrye-java/junit-testing.git</developerConnection>
+    <url>https://github.com/coldrye-java/junit-testing/tree/master</url>
+  </scm>
 </project>
