--- a/junit-env-extension/pom.xml
+++ b/junit-env-extension/pom.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
+    <parent>
+        <groupId>eu.coldrye.junit</groupId>
+        <artifactId>junit-testing</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>..</relativePath>
+    </parent>
+
     <groupId>eu.coldrye.junit</groupId>
-    <artifactId>junit-testing</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <relativePath>..</relativePath>
-  </parent>
+    <artifactId>junit-env-extension</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <groupId>eu.coldrye.junit</groupId>
-  <artifactId>junit-env-extension</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Extension for JUnit5 for managing set up and tear down of environments during testing</description>
+    <url>https://github.com/coldrye-java/junit-testing</url>
 
-  <name>${project.groupId}:${project.artifactId}</name>
-  <description>Extension for JUnit5 for managing set up and tear down of environments during testing</description>
-  <url>https://github.com/coldrye-java/junit-testing</url>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
 
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-    </license>
-  </licenses>
+    <developers>
+        <developer>
+            <name>Carsten Klein</name>
+            <email>trancesilken@gmail.com</email>
+            <organization>coldrye.eu</organization>
+            <organizationUrl>https://github.com/coldrye</organizationUrl>
+        </developer>
+    </developers>
 
-  <developers>
-    <developer>
-      <name>Carsten Klein</name>
-      <email>trancesilken@gmail.com</email>
-      <organization>coldrye.eu</organization>
-      <organizationUrl>https://github.com/coldrye</organizationUrl>
-    </developer>
-  </developers>
-
-  <scm>
-    <connection>scm:git:git://github.com/coldrye-java/junit-testing.git</connection>
-    <developerConnection>scm:git:ssh://github.com:coldrye-java/junit-testing.git</developerConnection>
-    <url>https://github.com/coldrye-java/junit-testing/tree/master</url>
-  </scm>
+    <scm>
+        <connection>scm:git:git://github.com/coldrye-java/junit-testing.git</connection>
+        <developerConnection>scm:git:ssh://github.com:coldrye-java/junit-testing.git</developerConnection>
+        <url>https://github.com/coldrye-java/junit-testing/tree/master</url>
+    </scm>
 </project>
