--- a/junit-env-extension/pom.xml
+++ b/junit-env-extension/pom.xml
@@ -11,7 +11,6 @@
     <relativePath>..</relativePath>
   </parent>
 
-  <groupId>eu.coldrye.junit</groupId>
   <artifactId>junit-env-extension</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -42,4 +41,15 @@
     <developerConnection>scm:git:ssh://github.com:coldrye-java/junit-testing.git</developerConnection>
     <url>https://github.com/coldrye-java/junit-testing/tree/master</url>
   </scm>
+
+  <dependencies>
+    <dependency>
+      <groupId>eu.coldrye.junit</groupId>
+      <artifactId>junit-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>eu.coldrye.junit</groupId>
+      <artifactId>junit-testing-common</artifactId>
+    </dependency>
+  </dependencies>
 </project>
