deactivate jacoco limits for now deactivate javadoc linting for now

--- a/junit-env-selenium/pom.xml
+++ b/junit-env-selenium/pom.xml
@@ -11,7 +11,7 @@
     <relativePath>..</relativePath>
   </parent>
 
-  <artifactId>junit-selenium-extension</artifactId>
+  <artifactId>junit-env-selenium</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
