--- a/junit-testing-common/pom.xml
+++ b/junit-testing-common/pom.xml
@@ -47,5 +47,10 @@
       <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
