--- a/junit-env-extension/pom.xml
+++ b/junit-env-extension/pom.xml
@@ -16,7 +16,7 @@
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
-  <description>Extension for JUnit5 for managing set up and tear down of environments during testing</description>
+  <description>Extension for JUnit5 for managing set up and tear down of environments during (integration) testing</description>
   <url>https://github.com/coldrye-java/junit-testing</url>
 
   <licenses>
@@ -42,14 +42,21 @@
     <url>https://github.com/coldrye-java/junit-testing/tree/master</url>
   </scm>
 
+  <properties>
+    <junit-common.version>1.0.0-SNAPSHOT</junit-common.version>
+    <junit-testing-common.version>1.0.0-SNAPSHOT</junit-testing-common.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-common</artifactId>
+      <version>${junit-common.version}</version>
     </dependency>
     <dependency>
       <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-testing-common</artifactId>
+      <version>${junit-testing-common.version}</version>
     </dependency>
   </dependencies>
 </project>
