--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,6 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <reporting.outputEncoding>UTF-8</reporting.outputEncoding>
 
-    <junit-common.version>1.0.0-SNAPSHOT</junit-common.version>
-    <junit-testing-common.version>1.0.0-SNAPSHOT</junit-testing-common.version>
-    <junit-env-extension.version>1.0.0-SNAPSHOT</junit-env-extension.version>
-
     <junit-platform.version>1.0.2</junit-platform.version>
     <junit-jupiter.version>5.0.2</junit-jupiter.version>
     <slf4j-api.version>1.7.25</slf4j-api.version>
@@ -66,6 +62,7 @@
     <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
     <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
+    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <sonar-maven-plugin.version>3.4.0.905</sonar-maven-plugin.version>
   </properties>
 
@@ -82,25 +79,6 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>eu.coldrye.junit</groupId>
-        <artifactId>junit-common</artifactId>
-        <version>${junit-common.version}</version>
-        <scope>compile</scope>
-      </dependency>
-      <dependency>
-        <groupId>eu.coldrye.junit</groupId>
-        <artifactId>junit-testing-common</artifactId>
-        <version>${junit-testing-common.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>eu.coldrye.junit</groupId>
-        <artifactId>junit-env-extension</artifactId>
-        <version>${junit-env-extension.version}</version>
-        <scope>compile</scope>
-      </dependency>
-
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
@@ -229,19 +207,18 @@
         </plugin>
       </plugins>
     </pluginManagement>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-invoker-plugin</artifactId>
-        <version>3.0.1</version>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>${maven-release-plugin.version}</version>
       </plugin>
-
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -352,7 +329,7 @@
             </goals>
             <configuration>
               <additionalJOptions>
-                <!-- TODO make the reported errors warnings instead -->
+                <!-- make the reported errors warnings instead -->
                 <additionalJOption>-Xdoclint:none</additionalJOption>
               </additionalJOptions>
             </configuration>
