--- a/junit-env-extension/pom.xml
+++ b/junit-env-extension/pom.xml
@@ -51,6 +51,7 @@
       <groupId>eu.coldrye.junit</groupId>
       <artifactId>junit-testing-common</artifactId>
       <version>${project.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
