pom bump version to 1.0.1-SNAPSHOT

--- a/junit-common/pom.xml
+++ b/junit-common/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>junit-testing</artifactId>
     <groupId>eu.coldrye.junit</groupId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
