--- a/junit-env-extension/src/examples/simple/pom.xml
+++ b/junit-env-extension/src/examples/simple/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>eu.coldrye.junit</groupId>
     <artifactId>junit-testing</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <relativePath>../../../..</relativePath>
   </parent>
 
