--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>eu.coldrye.junit</groupId>
   <artifactId>junit-testing</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -40,7 +40,7 @@
     <module>junit-common</module>
     <module>junit-testing-common</module>
     <module>junit-env-extension</module>
-    <!--<module>junit-env-hadoop-mini-clusters</module>-->
+    <module>junit-env-hadoop-mini-clusters</module>
   </modules>
 
   <properties>
