--- a/junit-env-hadoop-mini-clusters/pom.xml
+++ b/junit-env-hadoop-mini-clusters/pom.xml
@@ -65,6 +65,7 @@
         <artifactId>lombok-maven-plugin</artifactId>
         <version>1.16.18.1</version>
         <configuration>
+          <addOutputDirectory>false</addOutputDirectory>
           <sourceDirectory>src/main/java</sourceDirectory>
         </configuration>
         <executions>
