--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <mockito-all.version>2.0.2-beta</mockito-all.version>
     <slf4j-test.version>1.1.0</slf4j-test.version>
 
+    <lombok.version>1.16.18</lombok.version>
     <javax-servlet-api.version>3.0.1</javax-servlet-api.version>
     <spring-framework.version>5.0.2.RELEASE</spring-framework.version>
     <spring-test.version>5.0.4.RELEASE</spring-test.version>
@@ -100,6 +101,12 @@
         <groupId>org.junit.platform</groupId>
         <artifactId>junit-platform-launcher</artifactId>
         <version>${junit-platform.version}</version>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${lombok.version}</version>
         <scope>compile</scope>
       </dependency>
 
